# abstractive-text-summarization

./: .gitignore  03_pytextrank_experimentation.ipynb  abstractive-text-summ.ipynb  data-preparation.ipynb  pyproject.toml
gradio-screen/: gradio_app.py  pyproject.toml
gradio-screen/css/: index.css
gradio-screen/notebooks/: 01_fdk_test_framework_extractive.ipynb
gradio-screen/src/: text_rank_summarizer.py  transformer_summarization.py
notebooks/: 01_fdk_test_framework_extractive.ipynb
