[tool.poetry]
name = "abstractive-text-summarization"
version = "0.1.0"
description = ""
authors = ["swhustla <fdkelly@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastai = "^2.5.3"
tensorboard-pytorch = "^0.7.1"
jupyterlab = "^3.2.8"
torchtext = "^0.11.2"
graphviz = "^0.19.1"
icecream = "^2.1.2"
networkx = "^2.6.3"
Pygments = "^2.11.2"
scipy = "^1.8.0"
spacy = "^3.2.2"
pytextrank = "^3.2.2"
gradio = "^3.0.1"
black = "^22.3.0"
nb-black = "^1.0.7"
kaggle = "^1.5.12"
rouge = "^1.0.1"
swifter = "^1.1.3"
transformers = "^4.20.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
